app/static/css/main.css
/* ... */
[x-cloak] {
  display: none;
}
html {
  height: 100vh;
  background: linear-gradient(20deg, #c7ccff, #fffbd4) no-repeat center center fixed;
}
nav {
  position: sticky;
  top: calc(var(--spacing) * 0);
  margin-inline: auto;
  max-width: var(--breakpoint-lg);
  background-color: rgba(255, 255, 255, 0.95);
}
.regular-menu {
  margin-block: calc(var(--spacing) * 4);
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: var(--radius-lg);
  padding-inline: calc(var(--spacing) * 4);
  padding-block: calc(var(--spacing) * 2);
}
.mobile-menu {
  margin-bottom: calc(var(--spacing) * 4);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding-inline: calc(var(--spacing) * 4);
  padding-block: calc(var(--spacing) * 2);
}
.regular-menu ul {
  display: flex;
  list-style-type: none;
  gap: calc(var(--spacing) * 2);
  padding-inline: calc(var(--spacing) * 2);
}
.mobile-menu ul {
  display: flex;
  width: 100%;
  list-style-type: none;
  flex-direction: column;
  gap: calc(var(--spacing) * 2);
  padding-inline: calc(var(--spacing) * 2);
  padding-block: calc(var(--spacing) * 4);
}
.regular-menu li, .mobile-menu li {
  display: inline-block;
}
nav ul a {
  display: flex;
  cursor: pointer;
  align-items: center;
  gap: calc(var(--spacing) * 2);
  border-radius: var(--radius-lg);
  border-style: var(--tw-border-style);
  border-width: 1px;
  border-color: var(--color-gray-200);
  padding-inline: calc(var(--spacing) * 4);
  padding-block: calc(var(--spacing) * 3);
  font-size: var(--text-sm);
  line-height: var(--tw-leading, var(--text-sm--line-height));
  background-color: rgba(0, 0, 0, 0.04);
}
nav ul a:hover {
  border-color: var(--color-gray-300);
  --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
}
main {
  margin-inline: auto;
  display: flex;
  max-width: var(--breakpoint-lg);
  flex-direction: column;
}
section {
  padding-inline: calc(var(--spacing) * 4);
  color: var(--color-gray-600);
}
footer {
  padding-inline: calc(var(--spacing) * 2);
  padding-block: calc(var(--spacing) * 10);
  color: var(--color-gray-600);
}
.styled-a {
  color: var(--color-blue-500);
  &:hover {
    @media (hover: hover) {
      text-decoration-line: underline;
    }
  }
}
.btn-a {
  display: flex;
  width: auto;
  cursor: pointer;
  align-items: center;
  gap: calc(var(--spacing) * 2);
  border-radius: var(--radius-lg);
  border-style: var(--tw-border-style);
  border-width: 1px;
  border-color: var(--color-gray-400);
  padding-inline: calc(var(--spacing) * 4);
  padding-block: calc(var(--spacing) * 3);
  font-size: var(--text-sm);
  line-height: var(--tw-leading, var(--text-sm--line-height));
  background-color: rgba(0, 0, 0, 0.04);
}
.btn-a:hover {
  border-color: var(--color-gray-500);
  --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
}
article {
  display: flex;
  flex-direction: column;
  gap: calc(var(--spacing) * 2);
  border-radius: var(--radius-lg);
  padding: calc(var(--spacing) * 4);
  background-color: rgba(255, 255, 255, 0.8);
}
article a {
  color: var(--color-blue-500);
  &:hover {
    @media (hover: hover) {
      text-decoration-line: underline;
    }
  }
}
.article-content {
  margin-bottom: calc(var(--spacing) * 2);
  padding-inline: calc(var(--spacing) * 6);
}
.article-content h1 {
  font-size: var(--text-3xl);
  line-height: var(--tw-leading, var(--text-3xl--line-height));
}
.article-content h2 {
  font-size: var(--text-2xl);
  line-height: var(--tw-leading, var(--text-2xl--line-height));
}
.article-content h3 {
  font-size: var(--text-lg);
  line-height: var(--tw-leading, var(--text-lg--line-height));
  --tw-font-weight: var(--font-weight-bold);
  font-weight: var(--font-weight-bold);
}
.article-content p {
  margin-block: calc(var(--spacing) * 4);
}
.article-content ul {
  margin-left: calc(var(--spacing) * 2);
  list-style-position: inside;
  list-style-type: disc;
}
.article-content li {
  margin-block: calc(var(--spacing) * 2);
}
@property --tw-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-shadow-alpha {
  syntax: "<percentage>";
  inherits: false;
  initial-value: 100%;
}
@property --tw-inset-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-inset-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-inset-shadow-alpha {
  syntax: "<percentage>";
  inherits: false;
  initial-value: 100%;
}
@property --tw-ring-color {
  syntax: "*";
  inherits: false;
}
@property --tw-ring-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-inset-ring-color {
  syntax: "*";
  inherits: false;
}
@property --tw-inset-ring-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-ring-inset {
  syntax: "*";
  inherits: false;
}
@property --tw-ring-offset-width {
  syntax: "<length>";
  inherits: false;
  initial-value: 0px;
}
@property --tw-ring-offset-color {
  syntax: "*";
  inherits: false;
  initial-value: #fff;
}
@property --tw-ring-offset-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
/* ... */

